--- a/test/index.html
+++ b/test/index.html
@@ -171,8 +171,7 @@
     <script>
       document.addEventListener("DOMContentLoaded", function() {
         yall({
-          observeChanges: true,
-          idlyLoad: true
+          observeChanges: true
         });
       });
 
