--- a/test/index.html
+++ b/test/index.html
@@ -167,6 +167,7 @@
         <div class="css-bg-example lazy-bg"></div>
       </div>
     </div>
+    <script src="https://polyfill.io/v2/polyfill.min.js?features=IntersectionObserver"></script>
     <script src="js/yall.min.js"></script>
     <script>
       document.addEventListener("DOMContentLoaded", function() {
